optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_wrap_inner_inline_component_prop.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStore, useSignal } from '@qwik.dev/core';
export default component$((props: { id: number }) => {
      const renders = useStore(
        {
          count: 0,
        },
        { reactive: false }
      );
      renders.count++;
      const rerenders = renders.count + 0;
      const Id = (props: any) => <div>Id: {props.id}</div>;
      return (
        <>
          <Id id={props.id} />
          {rerenders}
        </>
      );
    });

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_G7jVUwdBFEM = ()=>import("./test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "component_G7jVUwdBFEM"));


None
============================= test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _jsxSorted, useStore } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const component_G7jVUwdBFEM = (props)=>{
	const renders = useStore({ count: 0 }, { reactive: false });
	renders.count++;
	const rerenders = renders.count + 0;
	const Id = (props)=>/*#__PURE__*/ _jsxSorted("div", null, null, ["Id:", props.id], 1, null);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [_jsxSorted(Id, { id: props.id }, null, null, 3, null), rerenders], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    95,
    465
  ]
}
*/
== DIAGNOSTICS ==

[]
