optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_wrap_logical_expression_in_template.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from '@qwik.dev/core';

export default component$(() => {
	const count = useSignal(0);
	const count2 = useSignal(0);
	return (
		<div>
			{(count || count2).value}
		</div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_G7jVUwdBFEM = ()=>import("./test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "component_G7jVUwdBFEM"));


None
============================= test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
export const component_G7jVUwdBFEM = ()=>{
	const count = useSignal(0);
	const count2 = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(count || count2), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    83,
    211
  ]
}
*/
== DIAGNOSTICS ==

[]
