optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_wrap_prop_from_destructured_array.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, useTask$ } from '@qwik.dev/core';
import { useForm, useForm2 } from './some-file.ts';

export const Input = component$<{error: string, error2: string, error3: string}>(
	(props) => {
		useTask$(({ track }) => {
			track(() => props.error);
			track(() => props.error2);
			track(() => props.error3);
		});

		return (
			<>
			</>
		);
	}
);

export default component$(() => {
	const [store, math] = [useStore({errors: {}}), Math.random()];
	const [[store2]] = [[useStore({errors: {}})]];
	const { store3, math4 } = { store3: useStore({errors: {}}), math4: Math.random() };
	const math2 = [Math.random()];
	const { math3 } = { math3: Math.random() };
	const [store4] = useForm();
	const {store5} = useForm2();

	return (
		<div>
			<button onClick$={() => {
				store.errors.test = store.errors.test ? undefined : 'ERROR TEST';
			}}>click</button>
			<Input 
				error={store.errors.test}
				error2={store2.errors.test}
				error3={store3.errors.test}
				error4={store4.errors.test}
				error5={store5.errors.test}
				math={math}
				math2={math2}
				math3={math3}
				math4={math4}
			/>
		</div>
	);
});

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { Input } from "./test";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useForm } from "./some-file.ts";
import { useForm2 } from "./some-file.ts";
import { useStore } from "@qwik.dev/core";
const i_TfpwI5Xb2NU = ()=>import("./test.tsx_test_component_div_button_onClick_TfpwI5Xb2NU");
const i_Sbgs9Wtfkt0 = ()=>import("./test.tsx_Input_component_useTask_Sbgs9Wtfkt0");
export const test_component_LUXeXe0DQrg = ()=>{
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_Sbgs9Wtfkt0, "Input_component_useTask_Sbgs9Wtfkt0", [props]));
	const [[store2]] = [[useStore({ errors: {} })]];
	const { store3, math4 } = {
		store3: useStore({ errors: {} }),
		math4: Math.random()
	};
	const math2 = [Math.random()];
	const { math3 } = { math3: Math.random() };
	const [store4] = useForm();
	const { store5 } = useForm2();
	return /*#__PURE__*/ _jsxSorted("div", null, null, [/*#__PURE__*/ _jsxSorted("button", { "on:click": /*#__PURE__*/ qrl(i_TfpwI5Xb2NU, "test_component_div_button_onClick_TfpwI5Xb2NU") }, null, "click", 3, null), _jsxSorted(Input, {
		error: store.errors.test,
		error2: store2.errors.test,
		error3: store3.errors.test,
		error4: store4.errors.test,
		error5: store5.errors.test,
		math,
		math3,
		math4
	}, { math2 }, null, 3, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    400,
    1139
  ]
}
*/
============================= test.tsx_test_component_div_button_onClick_TfpwI5Xb2NU.js (ENTRY POINT)==

export const test_component_div_button_onClick_TfpwI5Xb2NU = ()=>{
	store.errors.test = store.errors.test ? undefined : "ERROR TEST";
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_button_onClick_TfpwI5Xb2NU",
  "entry": null,
  "displayName": "test.tsx_test_component_div_button_onClick",
  "hash": "TfpwI5Xb2NU",
  "canonicalFilename": "test.tsx_test_component_div_button_onClick_TfpwI5Xb2NU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Input_component_useTask_Sbgs9Wtfkt0.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Input_component_useTask_Sbgs9Wtfkt0 = ({ track })=>{
	const [props] = useLexicalScope();
	track(()=>props.error);
	track(()=>props.error2);
	track(()=>props.error3);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Input_component_useTask_Sbgs9Wtfkt0",
  "entry": null,
  "displayName": "test.tsx_Input_component_useTask",
  "hash": "Sbgs9Wtfkt0",
  "canonicalFilename": "test.tsx_Input_component_useTask_Sbgs9Wtfkt0",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    225,
    334
  ]
}
*/
============================= test.tsx_Input_component_9metqqaxlN8.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const Input_component_9metqqaxlN8 = (props)=>{
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_Sbgs9Wtfkt0, "Input_component_useTask_Sbgs9Wtfkt0", [props]));
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Input_component_9metqqaxlN8",
  "entry": null,
  "displayName": "test.tsx_Input_component",
  "hash": "9metqqaxlN8",
  "canonicalFilename": "test.tsx_Input_component_9metqqaxlN8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    201,
    369
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_Sbgs9Wtfkt0 = ()=>import("./test.tsx_Input_component_useTask_Sbgs9Wtfkt0");
const i_9metqqaxlN8 = ()=>import("./test.tsx_Input_component_9metqqaxlN8");
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
export const Input = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_9metqqaxlN8, "Input_component_9metqqaxlN8"));
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
