optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_wrap_store_expression.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export default component$(() => {
	const panelStore = useStore(() => ({
		active: 'Input',
		list: PANELS,
	}));

	return (
		<div
			stuff={panelStore.active ? 'yes' : 'no'}
			class={{
				'too-long-to-wrap': true,
				'examples-panel-input': panelStore.active === 'Input',
				'examples-panel-output': panelStore.active === 'Output',
				'examples-panel-console': panelStore.active === 'Console',
			}}
		/>
	);
});
export const PANELS: ActivePanel[] = ['Examples', 'Input', 'Output', 'Console'];

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_G7jVUwdBFEM = ()=>import("./test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "component_G7jVUwdBFEM"));
export const PANELS = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "component_G7jVUwdBFEM"));


None
============================= test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _jsxSorted, useStore } from "@qwik.dev/core";
export const component_G7jVUwdBFEM = ()=>{
	const panelStore = useStore(()=>({
		active: "Input",
		list: PANELS
	}));
	return /*#__PURE__*/ _jsxSorted("div", {
		stuff: panelStore.active ? "yes" : "no",
		class: {
			"too-long-to-wrap": true,
			"examples-panel-input": panelStore.active === "Input",
			"examples-panel-output": panelStore.active === "Output",
			"examples-panel-console": panelStore.active === "Console"
		}
	}, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    82,
    472
  ]
}
*/
== DIAGNOSTICS ==

[]
