optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_support_windows_paths.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
export const Greeter = component$(() => <div/>)

============================= components\apps\apps.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_327zcEVeBl8 = ()=>import("./components\\apps\\apps.tsx_Greeter_component_327zcEVeBl8");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_327zcEVeBl8, "Greeter_component_327zcEVeBl8"));


None
============================= components\apps\apps.tsx_Greeter_component_327zcEVeBl8.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const Greeter_component_327zcEVeBl8 = ()=>/*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);


None
/*
{
  "origin": "components\\apps\\apps.tsx",
  "name": "Greeter_component_327zcEVeBl8",
  "entry": null,
  "displayName": "components\\apps\\apps.tsx_Greeter_component",
  "hash": "327zcEVeBl8",
  "canonicalFilename": "components\\apps\\apps.tsx_Greeter_component_327zcEVeBl8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    91
  ]
}
*/
== DIAGNOSTICS ==

[]
