optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_transform_qrl_in_regular_prop.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
export const Cmp = component$(() =>
	<Cmp foo={$(() => console.log('hi there'))}>Hello Qwik</Cmp>);

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_OWTWhMUeZXA = ()=>import("./test.tsx_test.tsx_Cmp_component_Cmp_foo_OWTWhMUeZXA");
const i_qsBJpzBk9qc = ()=>import("./test.tsx_test.tsx_Cmp_component_qsBJpzBk9qc");
export const Cmp = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_qsBJpzBk9qc, "test.tsx_Cmp_component_qsBJpzBk9qc"));


None
============================= test.tsx_test.tsx_Cmp_component_Cmp_foo_OWTWhMUeZXA.js (ENTRY POINT)==

export const test.tsx_Cmp_component_Cmp_foo_OWTWhMUeZXA = ()=>console.log("hi there");


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Cmp_component_Cmp_foo_OWTWhMUeZXA",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_Cmp_foo",
  "hash": "OWTWhMUeZXA",
  "canonicalFilename": "test.tsx_test.tsx_Cmp_component_Cmp_foo_OWTWhMUeZXA",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    97,
    126
  ]
}
*/
============================= test.tsx_test.tsx_Cmp_component_qsBJpzBk9qc.js (ENTRY POINT)==

import { Cmp } from "./test";
import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_OWTWhMUeZXA = ()=>import("./test.tsx_test.tsx_Cmp_component_Cmp_foo_OWTWhMUeZXA");
export const test.tsx_Cmp_component_qsBJpzBk9qc = ()=>_jsxSorted(Cmp, { foo: /*#__PURE__*/ qrl(i_OWTWhMUeZXA, "test.tsx_Cmp_component_Cmp_foo_OWTWhMUeZXA") }, null, "Hello Qwik", 3, null);


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Cmp_component_qsBJpzBk9qc",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "qsBJpzBk9qc",
  "canonicalFilename": "test.tsx_test.tsx_Cmp_component_qsBJpzBk9qc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    145
  ]
}
*/
== DIAGNOSTICS ==

[]
